samples/_failures_safe/1761800762_1bc5ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bdde494.c: In function ‘main’:
./samples/SAFE/__tmp_5bdde494.c:143:44: error: expected ‘)’ at end of input
  143 |         else if (strcmp(level_ptr, "ERROR")
      |                 ~                          ^
      |                                            )
./samples/SAFE/__tmp_5bdde494.c:143:9: error: expected declaration or statement at end of input
  143 |         else if (strcmp(level_ptr, "ERROR")
      |         ^~~~
./samples/SAFE/__tmp_5bdde494.c:143:9: error: expected declaration or statement at end of input
